# datalogger-server

./: Makefile  README  gsoap-patch
rpserver/: Makefile.am  autogen.sh  configure.ac
rpserver/cert/: cacert.pem
rpserver/gsoap/: Makefile.in  rpserver.h
rpserver/src/: Makefile.am  cmdfile.c  cmdfile.h  logfile.c  logfile.h  md5.c  rpfileutil.c  rpfileutil.h  rpserver.c  rpserver_db.c  rpserver_db.h  rpserver_glob.h  rpserverutil.c
